<resources>
    <string name="app_name">FitCal</string>
    <string name="p1_greeting">Selamat Datang di FitCal</string>
    <string name="p1_greeting_2">FitCal adalah aplikasi inovatif yang dirancang untuk membantu Anda mengelola asupan kalori harian Anda dengan mudah. Dengan menggunakan teknologi canggih dan algoritma pembelajaran mesin, FitCal dapat mendeteksi gambar makanan dan memberikan informasi kalori yang akurat. Apakah tujuan Anda adalah menambah berat badan, menurunkannya, atau sekadar menjaga kesehatan, FitCal siap mendukung Anda. Dengan FitCal, mengatur asupan kalori menjadi lebih praktis dan efektif, membantu Anda mencapai tujuan berat badan dan meningkatkan kesejahteraan secara keseluruhan. Mari kita mulai perjalanan menuju gaya hidup sehat bersama FitCal!</string>
    <string name="p1_btn_1">Cek kalori makanan</string>
    <string name="p1_btn_2">Hitung kebutuhan kalori harian</string>
    <string name="p1_btn_3">Hitung kalori yang terbakar</string>
    <string name="p1_btn_4">Kalkulator BMI</string>
    <!--Check Calorie Activity-->
    <string name="check_heading">Cek Kalori Makanan</string>
    <string name="CheckCal_head">Upload atau foto makanan yang ingin di cek</string>
    <string name="checkCal_btn_kamera">Camera</string>
    <string name="checkCal_btn_gallery">Gallery</string>
    <string name="checkCal_btn_check">Check Calorie</string>
    <string name="btn_hitung">Hitung</string>
    <string name="result_check">Prediksi</string>
    <string name="title_cal">Kalori</string>
    <string name="title_rec">Rekomendasi</string>
    <string name="value_cal">Calories</string>
    <string name="value_rec">Recommendation</string>
    <!--BMI Activity-->
    <string name="BMICheck_head">BMI adalah indikator pengukuran yang digunakan untuk menentukan kategori berat badan ideal atau tidak. Melalui hasil perhitungan BMI, Anda akan mengetahui kategori berat badan, yaitu kurus, ideal, berlebihan, atau bahkan obesitas.</string>
    <string name="weight_edit_text">Masukan Berat</string>
    <string name="height_edit_text">Masukan Tinggi</string>
    <string name="kg">Kg</string>
    <string name="cm">Cm</string>
    <string name="invalid_input">Invalid input. Please enter valid numbers.</string>
    <string name="result_header">Kadar BMI Anda</string>
    <string name="bmi_result">%.2f</string>
    <string name="underweight">Kurus, kekurangan berat badan</string>
    <string name="normal_weight">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="obesity">Obesity</string>
    <string name="advice_underweight">Dari kadar BMI Anda, menunjukan berat badan Anda dalam kategori Kurus, kekurangan berat badan untuk orang dewasa dengan tinggi badan Anda. Menjaga berat badan yang sehat dapat mengurangi risiko penyakit kronis yang terkait dengan kelebihan berat badan dan obesitas</string>
    <string name="advice_normal">Dari kadar BMI Anda, menunjukan berat badan Anda dalam kategori Normal untuk orang dewasa dengan tinggi badan Anda. Menjaga berat badan yang sehat dapat mengurangi risiko penyakit kronis yang terkait dengan kelebihan berat badan dan obesitas</string>
    <string name="advice_overweight">Dari kadar BMI Anda, menunjukan berat badan Anda dalam kategori Gemuk, kelebihan berat badan untuk orang dewasa dengan tinggi badan Anda. Menjaga berat badan yang sehat dapat mengurangi risiko penyakit kronis yang terkait dengan kelebihan berat badan dan obesitas</string>
    <string name="advice_obesity">Perlu olahraga</string>
    <!--Login and Register Activity-->
    <string name="title_login_page">Ayo login dan jaga agar tubuh kita tetap sehat</string>
    <string name="title_signup_page">Lengkapi data diri anda di bawah ini untuk pembuatan akun</string>
    <string name="message_login_page">Silahkan masukan E-mail dan password anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <!--Welcome Activity-->
    <string name="title_welcome_page">Selamat datang di FitCal!</string>
    <string name="message_welcome_page">Ayo cek dan jaga kebutuhan kalori Anda agar tubuh anda tetap fit dan sehat. </string>
    <!--Burn Activity-->
    <string name="burn_heading">Hitung Kalori yang Terbakar</string>
    <string name="burn_desc">Fitur Bakar Kalori membantu Anda memahami seberapa banyak energi yang mereka keluarkan, yang penting untuk manajemen berat badan dan peningkatan kebugaran secara keseluruhan.</string>
    <string name="message_welcome_page2">*Silahkan masuk jika anda sudah memiliki akun, dan daftar jika belum memiliki akun</string>

</resources>